# irisett

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md  concepts.md  examples.md  samples.md
docs-sphinx/: Makefile  conf.py  index.rst
examples/: irisett.cfg
irisett/: bindata.py  contact.py  errors.py  event.py  log.py  main.py  metadata.py  monitor_group.py  nagios.py  object_exists.py  object_models.py  object_models.pyi  sql.py  sql_data.py  stats.py  utils.py
irisett/monitor/: active.py  active_sql.py
irisett/notify/: clicksend.py  email.py  http.py  manager.py  slack.py  sms.py
irisett/sql/: __init__.py  base.py  db_mysql.py  db_sqlite.py  mysql_data.py  sqlite_data.py
irisett/webapi/: errors.py  middleware.py  require.py  view.py  webapi.py
irisett/webmgmt/: errors.py  jinja_filters.py  middleware.py  view.py  webmgmt.py  ws_event_proxy.py
irisett/webmgmt/static/: style.css
irisett/webmgmt/templates/: active_alerts.html  active_monitor_def.html  alert_history.html  alerts.html  alerts_base.html  base.html  contacts_base.html  display_active_monitor.html  display_active_monitor_def.html  display_contact.html  display_contact_group.html  display_monitor_group.html  events.html  index.html  list_active_monitor_alerts.html  list_active_monitor_defs.html  list_active_monitor_results.html  list_active_monitors.html  list_contacts.html  (+7 more)
scripts/: irisett  irisett-cli  run-checks.sh  run-pyinstaller.sh
tests/: README  sqlsetup.py  test_basic.py
