[tool.poetry]
name = "irisett"
version = "0.1.0"
description = ""
authors = ["Simon Ekstrand <simon@beebyte.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiodns = "^3.1.1"
aiohttp = "^3.9.3"
aiohttp-jinja2 = "^1.6"
aiomysql = "^0.2.0"
aiosmtplib = "^3.0.1"
async-timeout = "^4.0.3"
chardet = "^5.2.0"
jinja2 = "^3.1.3"
markupsafe = "^2.1.4"
pymysql = "^1.1.0"
requests = "^2.31.0"
yarl = "^1.9.4"
attrs = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
