[project]
name = "irisett-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp-jinja2>=1.6",
    "aiohttp>=3.13.3",
    "aiomysql>=0.3.2",
    "aiosmtplib>=5.1.0",
    "async-timeout>=5.0.1",
    "chardet>=7.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "mccabe>=0.7.0",
    "multidict>=6.7.1",
    "pycares>=5.0.1",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "yarl>=1.23.0",
    "attrs>=25.4.0",
]
